--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,8 +58,8 @@ jobs:
           sudo systemctl start mysql.service
       - name: Setup databases
         run: |
-          mysql --user=root --password=root --host=127.0.0.1 -e 'create database active_record_random_test collate utf8_general_ci;';
-          mysql --user=root --password=root --host=127.0.0.1 -e 'use active_record_random_test;show variables like "%character%";show variables like "%collation%";';
+          mysql --user=root --password=root --host=127.0.0.1 -e 'create database random_rails_test collate utf8_general_ci;';
+          mysql --user=root --password=root --host=127.0.0.1 -e 'use random_rails_test;show variables like "%character%";show variables like "%collation%";';
       - name: Run tests
         run: bundle exec rspec
 
@@ -105,6 +105,6 @@ jobs:
           bundler-cache: true
       - name: Setup databases
         run: |
-          psql -h localhost -p 5432 -W postgres -c 'create database active_record_random_test;' -U postgres;
+          psql -h localhost -p 5432 -W postgres -c 'create database random_rails_test;' -U postgres;
       - name: Run tests
         run: bundle exec rspec
