chore: update RuboCop configuration and dependencies for improved linting and performance

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,8 @@ inherit_mode:
 require:
   - standard/cop/block_single_line_braces
   - standard
+
+plugins:
   - rubocop-performance
 
 inherit_gem:
